--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "marcin-orlowski/laravel-api-response-builder": "^11.0",
         "spatie/laravel-html": "^3.10",
         "spatie/laravel-permission": "^6.9",
         "yajra/laravel-datatables-oracle": "^11.0"
